# CIS194HaskellExercises

./: .gitignore  CIS194HaskellExercises.cabal  README.md
src/HW1/: CreditCard.hs  Hanoi.hs
src/HW10/: AParser.hs
src/HW11/: ApplicativeUtil.hs  SExpr.hs
src/HW12/: Risk.hs
src/HW2/: Log.hs  LogAnalysis.hs
src/HW3/: Golf.hs
src/HW4/: Assignment.hs
src/HW5/: Calc.hs  Parser.hs  StackVM.hs  VarExprT.hs
src/HW6/: Fibonacci.hs
src/HW7/: Editor.hs  JoinList.hs  Scrabble.hs  Sized.hs  StringBufEditor.hs  StringBuffer.hs
src/HW8/: Employee.hs  Party.hs
test/HW1/: CreditCardSpec.hs  HanoiSpec.hs
test/HW10/: AParserSpec.hs
test/HW11/: SExprSpec.hs
test/HW12/: RiskSpec.hs
test/HW2/: LogAnalysisSpec.hs
test/HW4/: AssignmentSpec.hs
test/HW5/: CalcSpec.hs
test/HW6/: FibonacciSpec.hs
test/HW7/: JoinListSpec.hs
test/HW8/: PartySpec.hs
