name:                CIS194HaskellExercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/CIS194HaskellExercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Data.String.Strip
    , HW1.CreditCard
    , HW1.Hanoi
    , HW2.Log
    , HW2.LogAnalysis
    , HW4.Assignment
    , HW5.Calc
    , HW5.ExprT
    , HW5.Parser
    , HW5.VarExprT
    , HW5.StackVM
    , HW6.Fibonacci
    , HW7.JoinList
    , HW7.Sized
    , HW7.Scrabble
    , HW7.Buffer
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , containers
                     , mtl
  default-language:    Haskell2010

executable CIS194HaskellExercises
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CIS194HaskellExercises
  default-language:    Haskell2010

test-suite CIS194HaskellExercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , QuickCheck
                     , primes
                     , CIS194HaskellExercises
  allow-newer : true
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/CIS194HaskellExercises
